* Minor style update to the 'Add New Tweet' button * Verifying compatibility with WordPress 3.5 * No longer deleting tweets on deactivation
git-svn-id: https://plugins.svn.wordpress.org/comment-tweets/trunk@637828 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/less/admin.less
+++ b/css/less/admin.less
@@ -1,4 +1,8 @@
 .tweet_url { 
 	width:	99%;
 	margin: 5px 0 5px 0;
-} // #tweet_url
+} // .tweet_url
+
+#add-new-tweet {
+	margin-top: 5px;
+} // #add-new-tweet
